# bav-dqs-framework

./: LICENSE  README.md  pyproject.toml
src/bav_dqs/: __init__.py
src/bav_dqs/core/detectors/: boundary_detector.py
src/bav_dqs/core/engines/: base.py  qiskit.py  qiskit_engine.py
src/bav_dqs/core/models/: dirac_circuits.py
src/bav_dqs/core/operators/: correlation_observable.py  definitions.py  z_observable.py
src/bav_dqs/io/: __init__.py  data_manager.py  reader.py  writer.py
src/bav_dqs/plugins/: dirac_simulation.py
src/bav_dqs/runtime/: generate_plots.py  run_dirac_simulation.py
src/bav_dqs/utils/: config_manager.py
src/bav_dqs/utils/io/: data_manager.py  reader.py  writer.py
src/bav_dqs/utils/plugins/: dirac_simulation.py
src/bav_dqs/utils/runtime/: generate_plots.py  run_dirac_simulation.py
src/bav_dqs/utils/types/: boundary_detector.py  dirac_simulation.py
src/configs/: dirac_simulation.yaml
tests/: test_boundary_detector.py  test_config_manager.py  test_dirac_simulation.py  test_io.py  test_minimum.py
